frontend_tests/negative/excluded_channel/go.mod
module example.com/renvotests/negative/channel

go 1.25
